# office-hours-queue

./: .eslintignore  .gitignore  LICENSE  README.md  cypress.json  docker-compose.test.yaml  ohq.code-workspace  package-lock.json  package.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  Pipfile  README.md  app.yaml  dbdump.txt  deploy-prod.sh  deploy-stg.sh  deploy.sh  docker-compose.yaml  fly.toml  manage.py  nginx-proddev.conf  ohq-firebase-adminsdk.json  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
backend/officehoursqueue/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
backend/officehoursqueue/settings/: base.py  ci.py  development.py  proddev.py  production.py  staging.py
backend/ohq/: admin.py  apps.py  asgi.py  backends.py  filters.py  forms.py  invite.py  llm.py  models.py  pagination.py  permissions.py  queues.py  routing.py  schema.py  schemas.py  serializers.py  settings.py  sms.py  statistics.py  tasks.py  urls.py  vector_db.py  views.py  wsgi.py
backend/ohq/migrations/: 0001_initial.py  0002_alter_review_question.py  0002_auto_20200816_1727.py  0003_auto_20200822_1116.py  0004_auto_20200825_1344.py  0005_announcement.py  0005_auto_20201008_2346.py  0005_auto_20201009_1731.py  0005_auto_20201016_1459.py  0005_auto_20201016_1702.py  0005_auto_20201221_2055.py  0005_auto_20201226_1846.py  0005_auto_20201227_1510.py  0005_auto_20201229_1538.py  0006_auto_20201011_1238.py  0007_announcement.py  (+81 more)
backend/ohq_schedule/: __init__.py  admin.py  apps.py  forms.py  periods.py  utils.py
backend/scripts/: asgi-run
(+600 files in other folders)
